--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,19 +1,34 @@
-.container {
+.welcome-container {
     display: flex;
+    flex-direction: row;
+    width: 100%;
     align-items: center;
     justify-content: center;
-  }
-  img {
-    max-width: 100%;
-  }
-  .image {
-    flex-basis: 40%;
-  }
-  .welcome-text {
-    font-size: 20px;
+}
+  
+.right {
+    display: inherit;
+    align-items: center;
+}
+  
+.welcome-text {
     padding-left: 20px;
-    margin: 50px;
-  }
-  .button {
-      
-  }
+    margin: 50px;    
+}
+
+.button {
+    background-color: rgb(255, 0, 149) ;
+    padding: 10px ;
+    border: 1px solid rgb(207, 5, 157) ;
+    width: 100px;   
+    margin: 50px;  
+    
+}
+
+a {
+    text-decoration: none;
+    color: white;    
+}
+
+
+
