--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -13,15 +13,25 @@
   
 .welcome-text {
     padding-left: 20px;
-    margin: 50px;    
+    margin: 50px;
+    font-size: 38px;   
+}
+
+h1 {
+    margin-bottom: 1px;
+}
+
+p {
+    font-size: 24px;
 }
 
 .button {
     background-color: rgb(255, 0, 149) ;
     padding: 10px ;
     border: 1px solid rgb(207, 5, 157) ;
-    width: 100px;   
-    margin: 50px;  
+    width: 100px; 
+    margin: auto;  
+    
     
 }
 
