--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,6 +3,8 @@
     position: fixed; 
     width: 100%;
     overflow: hidden;
+    display: inline-block;
+    float: left;
     
 }
     
@@ -32,5 +34,21 @@ ul li a:hover{
 .active{
     background-color: rgb(255, 0, 149);
     color: #fff;
+}
+
+
+.SocialBar {
+    position: fixed; 
+    width: 100%;
+    overflow: hidden;
+    display: inline-block;
+    float: right;
+    
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: left;
 }
 
