worked on nav and social

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,22 +3,28 @@
 .Nav-Container {
     display: flex;
     flex-direction: row;
-    width:100%;
+    width: auto;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
     margin-left: 20px;
+    margin-right: 20px;
+    padding:20px 20px 20px 20px;
 }
 
 /* Main Nav */
 
 .NavBar {    
-    position: fixed; 
+    position: fixed;
+    border: 1px solid red; 
+    
+    
 }
 
 .NavBar ul {
     list-style: none;
     display: flex;
+    
     
 }
 
@@ -44,11 +50,14 @@
 
 .SocialBar {
     position: fixed; 
-    width: 100%;
-    overflow: hidden;
+    width: auto;
+    /* overflow: hidden; */
     /* display: flex; */
-    display: inherit;
-    align-items: right;
+    /* display: inherit; */
+    
+    
+    border: 1px solid red; 
+    
     
     
 
@@ -56,9 +65,11 @@
 }
 
 .SocialBar img {
-    height: 30px ;
-    width: 30px;
-    margin-right: -20px;
+    height: 20px ;
+    width: 20px;
+    margin-right: 20px;
+    
+    
     
 }
 
@@ -66,10 +77,11 @@
     list-style: none;
     display: flex;
     
+    
 }
 .SocialBar ul li a{
     text-decoration: none;
-    padding: 20px 20px;
+    
     
     
 }
