--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,92 +1,70 @@
-/* Nav Container */
-
 .Nav-Container {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
+    /* display: inline; */
+    /* flex-direction: row; */
+    /* width: auto; */
+    /* align-items: center; */
+    /* justify-content: space-between; */
+    /* margin-top: 20px; */
     margin-left: 20px;
     margin-right: 20px;
-    padding:20px 20px 20px 20px;
+    /* padding:20px 20px 20px 20px;  */
 }
 
-/* Main Nav */
 
-.NavBar {    
-    position: fixed;
-    border: 1px solid red; 
+.NavBar {
+    overflow: hidden;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    
     
     
     
     
 }
-
-.NavBar ul {
-    list-style: none;
-    display: flex;
-    padding-left: 0;
-}
-
-.NavBar ul li a{
+  
+.NavBar a {
+    float: left;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    color: rgb(255, 0, 149);
-    padding: 20px 10px;
-    font-weight: bold;    
+    font-size: 17px;
+    
 }
 
-.NavBar ul li a:hover{
-    background-color:rgb(255, 0, 149);
-    color: #fff;
+.NavBar li {
+    list-style-type:none;
+    
 }
-
-.NavBar a:active{
-    background-color: rgb(255, 0, 149);
-    color: #fff;
+  
+.NavBar a:hover {
+    /* background-color: #ddd; */
+    color: #ff0793;
 }
-
-
-/* Social Nav */
-
-.SocialBar {
-    position: fixed; 
-    width: auto;
-    /* overflow: hidden; */
-    /* display: flex; */
-    /* display: inherit; */
-    
-    
-    border: 1px solid red; 
-    
-    
-    
-
+  
+  
+.SocialBar {    
+    overflow: hidden;
+    margin-right: 30px;
     
 }
 
 .SocialBar img {
     height: 25px ;
     width: 25px;
-    margin-right: 20px;
+    margin-top: -10px;
     
-    
+
     
 }
 
-.SocialBar ul {
-    list-style: none;
-    display: flex;
-    padding-left: 20px;
-    
-    
+.SocialBar li {
+    list-style-type:none;
+    float: right;
 }
-.SocialBar ul li a{
-    text-decoration: none;
-    
-    
-    
-}
+
+
 
 
 
