--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -8,6 +8,9 @@
     margin-left: 20px;
     margin-right: 20px;
     /* padding:20px 20px 20px 20px;  */
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
 }
 
 
@@ -46,14 +49,15 @@
   
 .SocialBar {    
     overflow: hidden;
-    margin-right: 30px;
+    margin-right: 70px;
+    margin-top: -10px;
     
 }
 
 .SocialBar img {
     height: 25px ;
     width: 25px;
-    margin-top: -10px;
+    
     
 
     
