--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,7 +4,7 @@
     bottom: 0;
     width: 100%;
     height: 30px;
-    background: grey;
+    background: rgb(173, 173, 173);
     text-decoration: none;
     color: white; 
     
