--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -8,7 +8,7 @@
     /* margin-left: 20px; */
     /* margin-right: 20px; */
     /* padding:20px 20px 20px 20px;  */
-    position: fixed;
+    position: relative;
     top: 0; 
     width: 100%;
     background-color: rgb(213, 238, 250);
