--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,8 @@
 #Footer {
-    position: relative;
+    /* position: relative; */
+    position: -webkit-sticky;
+	position: sticky;
+	top: 0;
     padding: 10px 0px 0px 0px;
     bottom: 0;
     width: 100%;
