--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -8,10 +8,13 @@
     /* margin-left: 20px; */
     /* margin-right: 20px; */
     /* padding:20px 20px 20px 20px;  */
-    position: relative;
-    top: 0; 
+    /* position: relative;
+    top: 0;  */
     width: 100%;
     background-color: rgb(213, 238, 250);
+    position: -webkit-sticky;
+	position: sticky;
+	top: 0;
 }
 
 
@@ -20,10 +23,6 @@
     margin-top: 10px;
     margin-left: 20px;
     margin-right: 20px;
-    
-    
-    
-    
     
 }
   
@@ -37,8 +36,11 @@
     
 }
 
+
+
 .NavBar li {
     list-style-type:none;
+    
     
 }
   
