--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,15 +1,16 @@
 #Footer {
     /* position: relative; */
     position: -webkit-sticky;
-	position: sticky;
-	top: 0;
-    padding: 10px 0px 0px 0px;
+	position: fixed;
     bottom: 0;
+	/* top: 0; */
+    padding: 10px 0px 0px 0px;
     width: 100%;
     height: 30px;
     background: rgb(173, 173, 173);
     text-decoration: none;
     color: white; 
+    
     
     
 }
