rounded corders of background text colour box

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,11 +1,13 @@
 .Projects {
     padding-top: 65px; 
     background-color: pink;
+    border-radius: 25px;
     text-align: center;
     width: 800px;
     height: 600px;
     margin: 0 auto;
     padding: 0px 20px 10px 20px;
+    
     
 }
 
