--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,7 @@
 .About {
     padding-top: 65px; 
     background-color: pink;
+    border-radius: 25px;
     text-align: center;
     width: 800px;
     height: 600px;
