--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
 body {
-  margin: 0;
-  padding-top: 0px; 
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-image: url("/80s_pattern.png");
-  background-repeat: repeat-y; 
-  text-align: center;
-  
-  
-  
+    margin: 0;
+    padding-top: 0px; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-image: url("/80s_pattern.png");
+    background-repeat: repeat-y; 
+    text-align: center;
+    position: relative;
   
 }
+
 
 
 
