fixed closing tags for about page images

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -20,34 +20,21 @@
     text-align: center;
 }
 
-.image {
-    animation: fadeIn 5s;
-    -webkit-animation: fadeIn 5s;
-    -moz-animation: fadeIn 5s;
-    -o-animation: fadeIn 5s;
-    -ms-animation: fadeIn 5s;
-  }
-  @keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
+
   
-  @-moz-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
   
-  @-webkit-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
+.row {
+    display: flex;
+}
   
-  @-o-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-ms-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+
+.Image {
+  height: 50px ;
+  width: 50px;
+
+}
+
