--- a/src/components/About.css
+++ b/src/components/About.css
@@ -28,13 +28,13 @@
 }
   
 .column {
-  flex: 33.33%;
+  flex: 25%;
   padding: 5px;
 }
 
-.Image {
+/* .Image {
   height: 50px ;
   width: 50px;
 
-}
+} */
 
