--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,7 +2,9 @@
     padding-top: 50px; 
     padding-bottom: 50px;
     display: flex;
-    flex-direction: row;
+    
+    flex-direction: column;
+    /* flex-direction: row; */
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -11,6 +13,14 @@
 .right {
     display: inherit;
     align-items: center;
+    text-align: center;
+    max-width: 100%;
+    height: auto;
+}
+
+.right img {  
+    max-width: 350px;
+    height: auto;
 }
   
 .welcome-text {
@@ -33,6 +43,7 @@ p {
     border: 1px solid rgb(207, 5, 157) ;
     width: 100px; 
     margin: auto;  
+    margin-bottom: 20px;
     
     
 }
@@ -41,6 +52,8 @@ a {
     text-decoration: none;
     color: white;    
 }
+
+
 
 .image {
     animation: fadeIn 5s;
