--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,15 +1,4 @@
-.Nav-Container {
-    /* display: inline; */
-    /* flex-direction: row; */
-    /* width: auto; */
-    /* align-items: center; */
-    /* justify-content: space-between; */
-    /* margin-top: 20px; */
-    /* margin-left: 20px; */
-    /* margin-right: 20px; */
-    /* padding:20px 20px 20px 20px;  */
-    /* position: relative;
-    top: 0;  */
+/* .Nav-Container {
     width: 100%;
     background-color: rgb(213, 238, 250);
     position: -webkit-sticky;
@@ -22,8 +11,7 @@
     overflow: hidden;
     margin-top: 0px;
     margin-left: 20px;
-    margin-right: 20px;
-    
+    margin-right: 20px;   
 }
   
 .NavBar a {
@@ -32,43 +20,136 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
-    
+    font-size: 17px;    
 }
-
-
 
 .NavBar li {
     list-style-type:none;
-    
-    
 }
   
 .NavBar a:hover {
-    /* background-color: #ddd; */
     color: #ff0793;
-}
+} */
   
   
 .SocialBar {    
     overflow: hidden;
     margin-right: 50px;
     margin-top: -20px;
-    
 }
 
 .SocialBar img {
     height: 25px ;
     width: 25px;
-    
-    
-
-    
 }
 
 .SocialBar li {
     list-style-type:none;
     float: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* .Nav-Container {
+    margin: auto;
+    text-align: center;
+  }
+  
+  
+  .NavBar {
+    position: relative;
+    background-color: rgb(0, 0, 0);
+    overflow: hidden;  
+  
+  }
+  
+  .NavBar a {
+    float: left;
+    color: #f2f2f2;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    padding: 16px 26px;
+    text-decoration: none;
+    font-size: 20px;
+    
+    
+  }
+  
+  .NavBar a:hover {
+    background-color: #F60A8F;
+  }
+  
+  
+  
+  /* @media screen and (max-width: 600px) { */
+    /* .NavBar, .NavBar a {
+      float: none;
+      display: block;
+    } */ 
+
+
+/* Elements */
+li {
+    padding: 10px 0;
+    list-style-type: none;
+}
+
+button {
+    font-size: 30px;
+    margin-right: 30px;
+    color: white;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    float: right;
+}
+
+/* Class */
+.NavBar {
+    width: 100%;
+    background-color: rgb(213, 238, 250);
+    color: black;
+    padding: 10px;
+}
+
+.NavBar a {
+    color: black;
+}
+
+.links {
+  height: 0;
+  overflow: hidden;
+  list-style-type: none;
+  font-weight: bold;
+}
+
+.show-nav {
+    height: 120px;
+}
+
+/* Media screen size */
+@media screen and (min-width: 768px) {
+    button {
+        display: none;
+    }
+
+    .links {
+        height: auto;
+        display: flex;
+    }
+
+    li {
+        padding: 0 15px;
+    }
 }
 
 
