--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -4,10 +4,15 @@
     background-color: pink;
     border-radius: 25px;
     text-align: center;
-    width: 800px;
-    height: 600px;
+    /* width: 800px; */
+    /* height: 600px; */
     margin: 0 auto;
     padding: 0px 20px 10px 20px;
+
+    position: relative;
+    max-width: 800px;
+    height: auto;
+    margin-bottom: 50px;
     
     
 }
@@ -28,5 +33,23 @@
 .Projects ul {
     align-items: center;
 
+}
+
+
+.videowrapper {
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+}
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
