--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     background-image: url("/80s_pattern.png");
     background-repeat: repeat-y; 
     text-align: center;
-    position: relative;
+    /* position: relative; */
   
 }
 
